[package]
name = "vvrd"
version = "0.1.0"
authors = ["Wensheng Wang <wenshengwang@gmail.com>"]
edition = "2024"
rust-version = "1.86"
repository = "https://github.com/wensheng/vvrd"
description = "A terminal PDF and EPUB reader for the Vivido terminal"
license = "AGPL-3.0"

[[bin]]
name = "vvrd"
path = "src/main.rs"

[dependencies]
vivid_sdk = { version = "0.1.0", path = "../vivid_sdk" }
vivid_protocol = { version = "1.2.1", path = "../vivid_protocol" }

mupdf = { version = "0.8.0", default-features = false, features = ["svg", "system-fonts", "base14-fonts", "img", "html", "epub"] }
crossterm = "0.29"
image = { version = "0.25", features = ["png", "rayon"], default-features = false }
rayon = { version = "1", default-features = false }

clap = { version = "4", features = ["derive", "env"] }
csscolorparser = { version = "0.8", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
md-5 = "0.11"

flume = { version = "0.12", default-features = false }
anyhow = "1"
thiserror = "2"
log = "0.4"
flexi_logger = "0.31"
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[profile.production]
inherits = "release"
lto = "fat"
